--- a/docs/source/refs.bib
+++ b/docs/source/refs.bib
@@ -1,5 +1,5 @@
 @Book{2020:chen,
-  author = {chen},
-  title = {SimCLR},
+  author = {Chen},
+  title = {A Simple Framework for Contrastive Learning of Visual Representations},
   year = {2020}
 }
